# protoncode

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  release-please-config.json
.github/workflows/: ci.yml  release-linux.yml  release-please.yml  release-windows.yml
packaging/linux/: protoncode.desktop
src/: app.rs  autostart.rs  config.rs  desktop_app.rs  lib.rs  main.rs  models.rs  otp.rs  secrets.rs  windows_app.rs
