[package]
name = "protoncode"
version = "0.1.4"
edition = "2024"
description = "windows tray app for masked proton mail otp notifications"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
base64 = "0.22.1"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
image = { version = "0.25.8", default-features = false, features = ["png"] }
keyring = "3.6.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"

[target.'cfg(windows)'.dependencies]
tao = "0.34.6"
tray-icon = "0.21.3"
winreg = "0.55.0"
wry = "0.54.2"

[build-dependencies]
winresource = "0.1.20"
