[package]
name = "protoncode"
version = "0.2.6"
edition = "2024"
authors = ["Microck <contact@micr.dev>"]
description = "desktop tray app for masked proton mail otp notifications"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Microck/protoncode"
repository = "https://github.com/Microck/protoncode"

[dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
base64 = "0.22.1"
crossbeam-channel = "0.5.15"
dirs = "6.0.0"
image = { version = "0.25.8", default-features = false, features = ["png"] }
keyring = "3.6.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"

[target.'cfg(any(windows, target_os = "linux"))'.dependencies]
tao = "0.34.6"
tray-icon = "0.21.3"
wry = { version = "0.54.2", features = ["transparent"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"

[build-dependencies]
winresource = "0.1.20"

[package.metadata.deb]
maintainer = "Microck <contact@micr.dev>"
copyright = "2026, Microck <contact@micr.dev>"
license-file = ["LICENSE", "4"]
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/protoncode", "usr/bin/protoncode", "755"],
    ["packaging/linux/protoncode.desktop", "usr/share/applications/protoncode.desktop", "644"],
    ["assets/protoncode-icon.png", "usr/share/pixmaps/protoncode.png", "644"],
    ["README.md", "usr/share/doc/protoncode/README.md", "644"],
    ["LICENSE", "usr/share/doc/protoncode/LICENSE", "644"],
]

[package.metadata.generate-rpm]
summary = "Desktop tray app for masked Proton Mail OTP notifications"
assets = [
    { source = "target/release/protoncode", dest = "/usr/bin/protoncode", mode = "755" },
    { source = "packaging/linux/protoncode.desktop", dest = "/usr/share/applications/protoncode.desktop", mode = "644" },
    { source = "assets/protoncode-icon.png", dest = "/usr/share/pixmaps/protoncode.png", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/protoncode/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/licenses/protoncode/LICENSE", mode = "644" },
]
auto-req = "find-requires"
